@@ -1,3 +1,8 @@
+(25/07/17)
+==========
+
+· Added Server > Bittorrent Sync alternatives
+
 (24/07/17)
 ==========
 
